@@ -151,6 +151,7 @@ pmReviewer2 = UserDescriptor('pmReviewer2', [])
 pmReviewerLevel2 = UserDescriptor('pmReviewerLevel2', [],
                                   email="pmreviewerlevel2@plonemeeting.org",
                                   fullname='M. PMReviewer Level Two')
+pmObserver2 = UserDescriptor('pmObserver2', [], email="pmobserver2@plonemeeting.org", fullname='M. PMObserver Two')
 pmAdviser1 = UserDescriptor('pmAdviser1', [])
 voter1 = UserDescriptor('voter1', [], fullname='M. Voter One')
 voter2 = UserDescriptor('voter2', [], fullname='M. Voter Two')
@@ -210,6 +211,7 @@ vendors = GroupDescriptor('vendors', 'Vendors', 'Devil')
 vendors.creators.append(pmCreator2)
 vendors.reviewers.append(pmReviewer2)
 vendors.observers.append(pmReviewer2)
+vendors.observers.append(pmObserver2)
 vendors.advisers.append(pmReviewer2)
 vendors.advisers.append(pmManager)
 setattr(vendors, 'signatures', '')
